Add styling for break

--- a/packages/tokenizer/browser/styles/markup-debug.css
+++ b/packages/tokenizer/browser/styles/markup-debug.css
@@ -7,12 +7,6 @@
 
   .markup-line {
     --widget: #000a;
-    /* display: inline-block; */
-    /* white-space: pre-line; */
-  }
-
-  .markup-line > .markup {
-    /* white-space: pre; */
   }
 
   .dark-mode .markup-line {
@@ -39,12 +33,6 @@
     background: #9991;
     outline: 1px solid #9993;
     outline-offset: -1px;
-    /* border-radius: 4px; */
-    /* border: 1px solid #9991; */
-    /* padding: 2px; */
-    /* padding-inline-start: calc(2px + var(--markup-soft-indent, 0)); */
-    /* margin: -3px; */
-    /* width: -webkit-fill-available; position: absolute; */
   }
 
   /* .markup-line-numbers .markup-line:focus-within::before, */
@@ -54,9 +42,6 @@
     outline-offset: -1px;
     background-color: var(--widge, #9996);
     color: var(--markup-contrast);
-    /* padding: 1px; */
-    /* margin-inline-start: calc(-1 * var(--markup-gutter) - 2px); */
-    /* margin-block-start: -1px; */
     opacity: 0.825;
     user-select: none;
     -webkit-user-select: none;
@@ -72,7 +57,6 @@
   .marked > .markup-line > .marker + .markup,
   .markup-wrapper:not(.marked) > .markup-line > .markup:hover {
     background-color: var(--bezel, white);
-    /* background-color: var(--markup-contrast, white); */
     box-shadow: 0 0 0 2px var(--bezel, white), 0 3px 10px -2px #0006;
     position: relative;
     -webkit-box-decoration-break: clone;
@@ -84,7 +68,6 @@
   .marked > .markup-line > .marker + .markup::before,
   .markup-wrapper:not(.marked) > .markup-line > .markup:hover::before {
     --padding: 1.5px;
-    /* display: grid; */
     position: absolute;
     pointer-events: none;
     content: attr(class);
@@ -126,11 +109,8 @@
     contain: strict;
     margin: 0 2px 0 0;
     padding: 0;
-
     order: -1;
-
     content: '!';
-
     opacity: 0.9;
     color: var(--markup-faults, white);
     background-color: var(--markup-faults-background, #f12);
@@ -148,9 +128,18 @@
     text-indent: 0;
   }
 
-  /* (element => element && (element.scrollIntoView(), inspect(element)))(document.querySelector('.fault')) */
+  .markup.break {
+    white-space: nowrap;
+  }
+
+  .markup.break::after {
+    white-space: pre;
+    content: '\23CE\00A0\000A';
+    font-size: 75%;
+    vertical-align: bottom;
+  }
 }
 
-.marker {
+.markup-wrapper .marker {
   display: none;
 }
