--- a/packages/tokenizer/browser/styles/markup.css
+++ b/packages/tokenizer/browser/styles/markup.css
@@ -278,6 +278,7 @@ pre.markup[line-numbers] .markup-line:empty::before {
   --color: var(--markup-comments, #aaa);
 }
 
+.markup.break,
 .markup.whitespace {
   --color: var(--markup-whitespace, #999);
 }
