--- a/packages/tokenizer/browser/styles/markup-debug.css
+++ b/packages/tokenizer/browser/styles/markup-debug.css
@@ -6,11 +6,15 @@
   }
 
   .markup-line {
-    --widget: #000a;
+    --widget-shadow: #0009;
+    --widget-underlay: #6666;
+    --widget-overlay: #9996;
   }
 
   .dark-mode .markup-line {
-    --widget: #fffa;
+    --widget-shadow: #fff9;
+    --widget-underlay: #ccc6;
+    --widget-overlay: #ccc6;
   }
 
   .markup-line > .markup {
@@ -67,21 +71,27 @@
   /* .markup-line > .markup:focus::before, */
   .marked > .markup-line > .marker + .markup::before,
   .markup-wrapper:not(.marked) > .markup-line > .markup:hover::before {
-    --padding: 1.5px;
+    --padding: 1.75px;
     position: absolute;
     pointer-events: none;
     content: attr(class);
     line-height: initial;
-    font-weight: initial;
+    font-weight: 400;
     font-style: initial;
     font: initial;
     font-size: 75%;
     font-family: inherit;
     white-space: normal;
-    background: var(--widget, #000a);
+    --underlay-color: var(--widget-underlay, #0006);
+    --overlay-color-1: var(--widget-overlay, #fff3);
+    --overlay-color-2: var(--ring, currentColor);
+    background: radial-gradient(var(--overlay-color-1) 0%, var(--overlay-color-2) 100%) center / 500%,
+      radial-gradient(var(--overlay-color-2) 0%, var(--overlay-color-1) 100%) center / 500%, var(--underlay-color);
+    background-blend-mode: screen;
     color: var(--markup-shadow, white);
-    text-shadow: 0 0.5px 0.5px var(--widget, #000a);
-    box-shadow: inset 0 0 50px var(--widget, #000a), inset 0 0 75px var(--ring, currentColor), 0 0 5px -2.5px #0006;
+    text-shadow: 0 1px 1px var(--markup-color, black);
+    box-shadow: inset 0 -1px 3px #0001, inset 0 0 25px var(--widget-underlay, #0006),
+      0 0 5px -2.5px var(--widget-shadow, #0009);
     border-radius: 1ch;
     border: none;
     border-bottom: 1ch solid var(--ring, currentColor);
