--- a/packages/tokenizer/examples/browser/styles.css
+++ b/packages/tokenizer/examples/browser/styles.css
@@ -27,7 +27,7 @@
     min-width: 100vw;
     max-width: 100vw;
     width: 100vw;
-    margin-left: calc(100vw - 100%);
+    /* margin-left: calc(100vw - 100%); */
     -webkit-text-size-adjust: 100%;
     font-size: 1rem;
     overflow-x: hidden;
@@ -36,30 +36,39 @@
   }
 
   body {
-    width: inherit;
     min-height: inherit;
     min-width: inherit;
     max-width: inherit;
-    /* overflow-x: hidden; */
+    width: inherit;
+
     margin: 0;
-    /* max-height: inherit; */
     /* overflow-y: scroll; */
     /* overflow-x: hidden; */
     touch-action: pan-y;
     background-color: #999;
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    /* display: flex; */
   }
 
   .markup-container {
-    height: max-content;
-    width: inherit;
-    max-width: inherit;
     min-height: inherit;
     min-width: inherit;
-    /* max-height: inherit; */
+    max-width: inherit;
+    width: inherit;
+
+    height: max-content;
     padding: 1ch;
     margin: 0;
+
     box-sizing: border-box;
-    /* display: grid; */
+
+    contain: content;
+
+    /* width: fill-available; */
+    /* width: -webkit-fill-available; */
+    /* width: -moz-fill-available; */
   }
   .markup-wrapper {
     margin: 0 1em 0 0;
@@ -75,6 +84,10 @@
     margin-left: -1ch;
     margin-right: -1ch;
     line-break: loose;
+    word-wrap: break-word;
+    user-select: text;
+    -webkit-user-select: text;
+    -moz-user-select: text;
   }
 
   .markup-container > header {
@@ -132,6 +145,7 @@
   --inset-shadow: 0 -0.875px 0;
   --outset-border: 0.5px solid var(--border);
   display: grid;
+
   grid-auto-flow: column dense;
   grid-gap: 1ch;
   padding: 0.25ch 1ch;
@@ -140,10 +154,13 @@
   font-family: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
   font-weight: 200;
+  font-size: 1rem;
   line-height: initial;
   user-select: none;
   -moz-user-select: none;
   -webkit-user-select: none;
+  box-sizing: border-box;
+  align-items: center;
 }
 
 .markup-container > header div > [title] > [id] {
@@ -172,10 +189,6 @@
 
 .markup-container > header div#summary {
   grid-column: 1;
-}
-
-.markup-container > header div#controls {
-  grid-row: 1;
 }
 
 .markup-container > header div > [title] {
@@ -212,19 +225,20 @@
   font-weight: lighter;
 }
 
+.markup-container > header div#controls {
+  grid-row: 1;
+  font-size: 1rem;
+  grid-gap: 0.5rem;
+  line-height: 1.5rem;
+}
+
+.markup-container > header div#controls > span {
+  display: contents;
+}
+
 .markup-container > header a[onclick] {
-  display: inline-block;
-  width: 2.5ch;
-  height: 0;
-  padding: 25% 0;
+  min-width: 1em;
   border-radius: 0.75ch;
-  background-clip: border-box;
-  border: var(--outset-border, none);
-  line-height: 0;
-  vertical-align: middle;
-  white-space: nowrap;
-  text-align: center;
-  overflow: hidden;
 }
 
 .markup-container > header a[onclick]:hover {
@@ -240,16 +254,32 @@
 }
 
 i[icon] {
-  font-style: normal;
-  font-family: monospace;
-  font-weight: 100;
-  display: block;
-  height: 50%;
-  line-height: 0;
-  overflow: visible;
+  all: initial;
+  overflow: hidden;
+  box-sizing: border-box;
+  display: inline-grid;
+  place-content: center;
+  place-items: center;
+  /* transform: translateY(0.0675em); */
+  /* transform: translateY(0.125em); */
+  transform: translateY(-7.5%);
+  height: 1.25em;
+  width: 1.25em;
+  color: inherit;
+  font-synthesis: weight style;
+  font-weight: inherit;
+  font-style: inherit;
+  font-size: inherit;
+  text-transform: full-width;
+  text-align: center;
+  /* border: 1px solid #9999; */
+  border-radius: 50%;
   padding: 0;
   margin: 0;
-  transform: translateY(-100%);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
+  line-height: 0;
+  vertical-align: middle;
 }
 
 @media only screen {
@@ -296,9 +326,16 @@ i[icon] {
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 480px) and (orientation: portrait) {
+  /* @viewport {
+    user-zoom: fixed;
+    zoom: 100%;
+    min-zoom: 100%;
+    max-zoom: 100%;
+  } */
   html {
-    font-size: calc(1vmin + 1vmax);
+    font-size: 0.75rem;
+    /* font-size: calc(1vmin + 1vmax); */
   }
 }
 @media print {
@@ -334,5 +371,6 @@ i[icon] {
     min-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     max-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
+    /* overflow-x: hidden; */
   }
 }
