--- a/packages/tokenizer/browser/styles/markup.css
+++ b/packages/tokenizer/browser/styles/markup.css
@@ -126,15 +126,13 @@
 }
 
 .markup-line {
-  font-variant-ligatures: common-ligatures discretionary-ligatures contextual historical-ligatures;
   break-before: auto;
   break-inside: avoid;
 
   --markup-soft-indent: calc(1em * var(--markup-soft-indent-tab-size));
   --markup-text-indent: calc(-1 * var(--markup-soft-indent) + 1px);
-  --markup-inset-margin: calc(var(--markup-gutter, 0) + 1px);
+  --markup-inset-margin: calc(var(--markup-gutter, 0));
   --markup-inset-padding: calc(0.275em + var(--markup-soft-indent));
-  /* --markup-line-height: calc(0.1px + 1em); */
 
   /* --markup-soft-indent: 1em; */
   /* --markup-soft-indent: 0; */
@@ -146,22 +144,31 @@
   text-indent: calc(-1 * var(--markup-soft-indent) + 1px);
   padding-inline-start: calc(0.275em + var(--markup-soft-indent));
 
-  border: 0 solid #9999;
+  /* border: 0 solid transparent; */
   width: -webkit-fill-available;
   width: -moz-fill-available;
   width: fill-available;
+
+  outline: var(--markup-line-outline);
+  outline-offset: var(--markup-line-outline-offset, -0.5px);
+  opacity: var(--markup-line-opacity);
+  color: var(--markup-line-color);
+  background-color: var(--markup-line-background-color);
 }
 
 .markup-line.no-reflow {
   --markup-soft-indent: 0.0001em;
 }
 
-.markup-line:not(.no-reflow) > .inset:first-of-type {
-  /* outline: 1px solid red; */
-}
-
 .markup-line .markup {
   color: var(--color, var(--markup-color, var(--markup-light-text, currentColor)));
+  hyphens: none;
+  word-break: initial;
+  line-break: loose;
+  font-synthesis: weight;
+  font-variant-ligatures: common-ligatures discretionary-ligatures contextual historical-ligatures;
+
+  font-weight: 300;
 }
 
 .markup-line-numbers pre,
@@ -169,7 +176,6 @@ pre.markup-line-numbers,
 pre.markup[line-numbers],
 pre > .markup-line-numbers {
   --markup-gutter: 3.5em;
-  /* --markup-gutter: 0; */
   counter-reset: line;
 }
 
@@ -177,40 +183,45 @@ pre > .markup-line-numbers {
 pre.markup-line-numbers .markup-line,
 pre.markup[line-numbers] .markup-line,
 pre > .markup-line-numbers .markup-line {
+  --markup-line-number-font-scale: 0.75;
+  --markup-line-number-color: var(--markup-neutral-dim, #9999);
+
+  border: 0 solid transparent;
   border-inline-start-width: 0.5px;
+  border-inline-start-color: #9999;
 }
 
 .markup-line-numbers .markup-line::before,
 pre.markup[line-numbers] .markup-line::before {
-  --font-scale: 0.75;
   float: left;
-  width: calc(-0.5em + var(--markup-gutter, 0.5em));
-  margin-inline-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / 0.75 + 1px);
-  counter-increment: line;
-  color: var(--markup-neutral-dim, #9999);
-  text-indent: 0;
+  vertical-align: middle;
+
   text-align: end;
-  font-variant: small-caps;
+  text-indent: 0;
+  white-space: pre;
+
+  counter-increment: line;
+  content: '';
+  content: counter(line) ' ';
+
+  --font-scale: var(--markup-line-number-font-scale, 1);
+
+  width: calc(-0.5em + var(--markup-gutter, 0.5em));
+  height: calc(100% * var(--font-scale));
+
+  margin-inline-start: calc(-1 * var(--markup-gutter, 0) - var(--markup-soft-indent) / 0.75 + 1px);
+
   font-size: calc(100% * var(--font-scale));
+  font-variant: small-caps;
   font-style: normal;
   font-weight: 400;
-  height: calc(100% * var(--font-scale));
-  vertical-align: middle;
-  white-space: pre;
+
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
-  content: '';
-  content: counter(line) ' ';
-  border: 0 solid #9999;
-  /* border-inline-end-width: 0.55px; */
-  pointer-events: none;
-  /* overflow: hidden; */
-}
 
-.markup-line-numbers .markup-line:empty::before,
-pre.markup[line-numbers] .markup-line:empty::before {
-  visibility: hidden;
+  color: var(--markup-line-number-color, inherit);
+  background-color: var(--markup-line-number-background-color, transparent);
 }
 
 @media only print {
@@ -225,11 +236,13 @@ pre.markup[line-numbers] .markup-line:empty::before {
 
 .markup.identifier {
   --color: var(--markup-identifiers, darkslategrey);
-  font-style: italic;
+  font-weight: 400;
+  /* font-style: italic; */
 }
 
 .markup.keyword {
   --color: var(--markup-keywords, chocolate);
+  /* font-weight: 300; */
 }
 
 .markup.pattern.opener,
@@ -241,9 +254,6 @@ pre.markup[line-numbers] .markup-line:empty::before {
 .markup.opener,
 .markup.closer {
   --color: var(--markup-closures, orange);
-  /* font-style: normal; */
-  font-weight: bolder;
-  font-variant-ligatures: none;
 }
 
 .markup.operator {
@@ -274,13 +284,19 @@ pre.markup[line-numbers] .markup-line:empty::before {
   --color: var(--markup-patterns, grey);
 }
 
+.markup.punctuator {
+  font-weight: 400;
+}
+
 .markup.regexp,
 .markup.in-regexp,
 .markup.pattern,
-.markup.in-pattern {
+.markup.in-pattern,
+.markup.quote,
+.markup.in-quote,
+.markup.fault {
+  font-weight: 400;
   font-variant-ligatures: none;
-  /* font-style: oblique; */
-  /* font-variant: normal; */
 }
 
 .markup.comment,
@@ -296,5 +312,11 @@ pre.markup[line-numbers] .markup-line:empty::before {
 .markup.fault {
   --color: var(--markup-faults, white);
   background-color: var(--markup-faults-highlight, #f219);
+  font-variant-ligatures: none;
+}
+
+.markup.opener,
+.markup.closer {
+  font-weight: 500;
   font-variant-ligatures: none;
 }
