--- a/packages/tokenizer/examples/browser/styles.css
+++ b/packages/tokenizer/examples/browser/styles.css
@@ -1,4 +1,4 @@
-/* @import '/pholio/styles/fonts/iosevka/iosevka.css'; */
+/* @import '/fonts/iosevka.css'; */
 @import '../../browser/styles/markup.css';
 @import '../../browser/styles/markup-debug.css';
 
