--- a/packages/tokenizer/browser/demo/demo.css
+++ b/packages/tokenizer/browser/demo/demo.css
@@ -1,6 +1,12 @@
 @import '../styles/markup.css';
 @import '../styles/markup-debug.css';
 
+@font-face {
+  font-family: markup;
+  font-display: swap;
+  src: local('Iosevka'), local('Fira Code'), local('Input'), local('Source Code Pro');
+}
+
 :host {
   --markup-neutral-light: var(--markup-neutral-light, #aaa);
   --markup-neutral: var(--markup-neutral, #999);
@@ -26,12 +32,9 @@
     min-width: 100vw;
     max-width: 100vw;
     width: 100vw;
-    /* margin-left: calc(100vw - 100%); */
     -webkit-text-size-adjust: 100%;
     font-size: 1rem;
     overflow-x: hidden;
-
-    /* background-color: var(--markup-background, #999); */
   }
 
   body {
@@ -41,14 +44,11 @@
     width: inherit;
 
     margin: 0;
-    /* overflow-y: scroll; */
-    /* overflow-x: hidden; */
     touch-action: pan-y;
     background-color: #999;
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
-    /* display: flex; */
   }
 
   .markup-container {
@@ -56,28 +56,18 @@
     min-width: inherit;
     max-width: inherit;
     width: inherit;
-
     height: max-content;
     padding: 1ch;
     margin: 0;
-
     box-sizing: border-box;
-
     contain: content;
-
-    /* width: fill-available; */
-    /* width: -webkit-fill-available; */
-    /* width: -moz-fill-available; */
   }
+
   .markup-wrapper {
     margin: 0 1em 0 0;
-    /* overflow-x: hidden; */
-    /* box-sizing: content-box; */
-    /* margin-inline-start: 1ch; */
   }
+
   .markup-container .markup-content {
-    /* overflow-x: hidden; */
-    /* overflow-y: visible; */
     padding-top: 4em;
     margin-top: -3em;
     margin-left: -1ch;
@@ -97,28 +87,6 @@
   }
 }
 
-@media only screen and (prefers-color-scheme: light) {
-  body {
-    background-color: var(--markup-light-background, #999);
-    color: var(--markup-light-contrast, black);
-  }
-}
-
-@media only screen and (prefers-color-scheme: dark) {
-  body {
-    background-color: var(--markup-dark-background, #999);
-    color: var(--markup-dark-contrast, white);
-  }
-}
-
-/** FLEX **/ /* @import '/pholio/styles/flex.css'; */
-
-@font-face {
-  font-family: markup;
-  font-display: swap;
-  src: local('Iosevka'), local('Fira Code'), local('Input'), local('Source Code Pro');
-}
-
 .markup-container {
   background-color: var(--markup-background, transparent);
   color: var(--markup-color, currentColor);
@@ -126,12 +94,9 @@
   -webkit-tab-size: var(--markup-tab-size, 2);
   -moz-tab-size: var(--markup-tab-size, 2);
   tab-size: var(--markup-tab-size, 2);
-  font-family: Iosevka, 'Iosevka Web', markup, monospace;
+  font-family: Iosevka, markup, monospace;
   font-kerning: auto;
-  /* font-variant-ligatures: contextual; */
   white-space: pre-wrap;
-  /* display: flex; */
-  /* position: relative; */
 }
 
 .markup-container.fade {
@@ -268,8 +233,6 @@ i[icon] {
   display: inline-grid;
   place-content: center;
   place-items: center;
-  /* transform: translateY(0.0675em); */
-  /* transform: translateY(0.125em); */
   transform: translateY(-7.5%);
   height: 1.25em;
   width: 1.25em;
@@ -280,7 +243,6 @@ i[icon] {
   font-size: inherit;
   text-transform: full-width;
   text-align: center;
-  /* border: 1px solid #9999; */
   border-radius: 50%;
   padding: 0;
   margin: 0;
@@ -292,7 +254,6 @@ i[icon] {
 
 @media only screen {
   .markup-container .markup-content {
-    /* will-change: filter, contents; */
     transition: filter 0.15s ease-out;
     user-select: contain;
     -moz-user-select: contain;
@@ -311,7 +272,6 @@ i[icon] {
     -moz-user-select: none;
     -webkit-user-select: none;
     will-change: transform;
-    /* float: center; */
   }
 
   .dark-mode .markup-container > header {
@@ -335,17 +295,11 @@ i[icon] {
 }
 
 @media screen and (max-width: 480px) and (orientation: portrait) {
-  /* @viewport {
-    user-zoom: fixed;
-    zoom: 100%;
-    min-zoom: 100%;
-    max-zoom: 100%;
-  } */
   html {
     font-size: 0.75rem;
-    /* font-size: calc(1vmin + 1vmax); */
   }
 }
+
 @media print {
   :root {
     --markup-color: black;
@@ -379,6 +333,19 @@ i[icon] {
     min-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     max-width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
-    /* overflow-x: hidden; */
+  }
+}
+
+@media only screen and (prefers-color-scheme: light) {
+  body {
+    background-color: var(--markup-light-background, #999);
+    color: var(--markup-light-contrast, black);
+  }
+}
+
+@media only screen and (prefers-color-scheme: dark) {
+  body {
+    background-color: var(--markup-dark-background, #999);
+    color: var(--markup-dark-contrast, white);
   }
 }
